--- a/data/post/8.md
+++ b/data/post/8.md
@@ -1,10 +1,10 @@
-### 백준 2557번 풀이 (with Python)
+### 백준 2557번 풀이
 
 ![2557image](/images/b2557.png)
 
-**Hello World**를 **출력**하면 되는 문제인 것을 알 수 있습니다.
+**Hello World**를 **출력**하면 되는 문제
 
-python3에서는 문장을 **출력**하기 위해 print()함수를 사용합니다.
+python3에서는 문장을 출력하기 위해 **print()** 함수를 사용합니다.
 
 ```python
 print("Hello World!")
